--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
                             <p v-if="hosting == 'cloudflare'">Cloudflares free certificate covers multiple subdomains but wildcard support is restricted to their Business plan. The certificates also <a target="_blank" href="https://support.cloudflare.com/hc/en-us/articles/203041594-What-browsers-work-with-CloudFlare-s-SSL-certificates-">do not support</a> old browser/OS combinations such as Windows XP or OS X 10.5 or less.</p>
                         </li>
                         <li>
+                            <h3>Check to see if your hosting / provider already offers FREE SSL</h3>
+                            <p>Though this is not yet the norm, as HTTPS becomes the default for alot of sites, providers are starting to offer SSL included with hosting packages. It's worth contacting them to be sure.</p>
+                        </li>
+                        <li>
                             <h3>Do you have a test site?</h3>
                             <p>This is optional as most sites don't have access to a test site, nor will many sites actually require one anyway.</p>
                             <p>But if you are able to, making these changes on a test / staging version of your site first would reduce the risk that comes from editing a production site. </p>
@@ -214,6 +218,10 @@
                         <li>
                             <h3>Dedicate some time to your migration</h3>
                             <p>Installing a certificate can be pretty quick, though the actual full migration process can take a good chunk of time to properly complete. We'd advise starting the moving day portion of this guide when you have a few hours free. If everything goes smoothly it may take much less time, but it's worth having that spare time just in case.</p>
+                        </li>
+                        <li>
+                            <h3>Make sure everyone involved in the site knows the migration is happening.</h3>
+                            <p>For example, if you're site has a separate marketing person or team, let them know what will be changing. Later on we'll be updating 3rd party links and they may need to be aware of the chnages and make changes of their own.</p>
                         </li>
                         <li>
                             <h3>How will you track changes</h3>
@@ -232,6 +240,7 @@
                             <h3>Do you plan to move your entire site or just specific areas first?</h3>
                             <p>If you can, moving your entire site. It means more work upfront but given the SEO benefits and knowledge that your entire site is encrypted for users is worth it.</p>
                             <p>However, not all sites are able to do this at one, at the very least you'll need to setup HTTPS for any login forms, payment pages and any pages that require or reveal user details.</p>
+                            <p>The rest of guide currently assumes you're moving your entire site so some parts of this you can skip or modify. E.g. you'll want to skip changing most 3rd party settings if the majority of your site is still over HTTP instead of HTTPS. You'd also want to not setup an entire site redirect, but instead redirect just the specific pages / sections over HTTPS and potentially setup redirects going the other way for pages required over HTTP fro HTTPS.</p>
                         </li>
                         <li>
                             <h3>Does your site have multiple variations?</h3>
@@ -500,11 +509,11 @@ RewriteRule ^(.*)$ https://site.com/$1 [R=301,L]</code>
                             <p>Most times site that use these are using a platform that auto generates them, so if you check just a couple pages you should be safe that this will be ok on all pages.</p>
                         </li>
                         <li>
-                            <h3>Update 3rd party analytics &amp; other links</h3>
+                            <h3>Update 3rd party scripts, analytics &amp; other links</h3>
                             <p>Some 3rd party tracking sites require you either update the tracked origin URL or set up a new account for monitoring.</p>
                             <p>Here's a few examples, but worth doing a quick audit of any 3rd party tools you use:</p>
                             <ul>
-                                <li>Google Search Console (Webmaster Tools) - Requires you setup a new account, this allows you to monitor traffic still in Google's index hitting the HTTP version first vs the HTTPS version of your site. This means any settings including Sitemaps &amp; Disavow files will need to be uploaded to the new account.</li>
+                                <li>Google Search Console (Webmaster Tools) - Requires you setup a new account, this allows you to monitor traffic still in Google's index hitting the HTTP version first vs the HTTPS version of your site. This means any settings including Sitemaps &amp; Disavow files will need to be uploaded to the new account. While in here, it's worth running the Crawl > Fetch as Google command in here to test Google can reach the site without any issues.</li>
                                 <li>Google Analytics - Requires a URL change in a couple areas:
                                     <ul>
                                         <li>Admin > View Settings > Website's URL</li>
@@ -516,6 +525,11 @@ RewriteRule ^(.*)$ https://site.com/$1 [R=301,L]</code>
                                 <li>Google Adwords - Update any Ad URLs to use HTTPS</li>
                                 <li>Bing Webmaster Tools - Like with Google, you'll need to create a new account for the HTTPs version of your site</li>
                             </ul>
+                            <p>It's worth reviewing your site for more of these as some you might not expect need updating such as: <a target="_blank" href="https://woorkup.com/migrate-disqus-comments-https/">Disqus comments</a> which uses the current url as the page the comments are tied to. As well as 3rd party Ads on sites like Twitter &amp; Facebook.</p>
+                        </li>
+                        <li>
+                            <h3>Last step, purge caches</h3>
+                            <p>Purge any caches, you may have had to do this earlier on to test content, but it's worth emptying / purging any internal to the platform caches and any CDN cache etc. to make sure all content is up to date with your changes.</p>
                         </li>
                     </ol>
 
@@ -527,6 +541,7 @@ RewriteRule ^(.*)$ https://site.com/$1 [R=301,L]</code>
                             <h3>Wait a day or maybe a week...</h3>
                             <p v-if="control == 'max'">If you're using CSP this is a great point to check reports and fix any issues, this can be an ongoing process.</p>
                             <p>Fix the issues found, such as any SSL issues reported, redirect issues or mixed content warnings and then proceed to following steps. </p>
+                            <p>Check your monitoring in Analytics, Webmaster tools etc. Here you may notice things like people still hitting the old HTTP pages if your redirect isn't setup correctly. </p>
                         </li>
                         <li>
                             <h3>Implement HSTS (HTTP Strict-Transport-Security)</h3>
@@ -565,6 +580,7 @@ Header set Strict-Transport-Security "max-age=15768000;"
                         <li>
                             <h3>Update internal links in pages, emails etc.</h3>
                             <p>Even with a redirect from HTTP to HTTPS setup, it's best to minimize temp HTTP redirects as these can still lead to exposing what the user was doing.</p>
+                            <p v-if="control == 'max'">To ease the pain of this, if you have access to the code and/or the database you could run a find and replace over all content for <code>href="http://yoursite.com</code> with <code>href="https://yoursite.com</code></p>
                         </li>
                         <li>
                             <h3>Update links on social media etc.</h3>
@@ -583,6 +599,10 @@ Header set Strict-Transport-Security "max-age=15768000;"
                         <li>
                             <h3>Iron out other similar security actions</h3>
                             <p>Similar to SSL test earlier, this report will show some other recommendations such as use of secure cookies: <a target="_blank" href="https://httpsecurityreport.com/">Security Report.</a></p>
+                        </li>
+                        <li>
+                            <h3>Enable HTTP/2 support</h3>
+                            <p>Now that your on HTTPS, you can benefit from the speed improvements that come from HTTP/2 on your server and/or CDN. </p>
                         </li>
                     </ol>
 
