spell check round 3 ;)

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                         </li>
                         <li>
                             <h3>Check to see if your hosting / provider already offers FREE SSL</h3>
-                            <p>Though this is not yet the norm, as HTTPS becomes the default for alot of sites, providers are starting to offer SSL included with hosting packages. It's worth contacting them to be sure.</p>
+                            <p>Though this is not yet the norm, as HTTPS becomes the default for a lot of sites, providers are starting to offer SSL included with hosting packages. It's worth contacting them to be sure.</p>
                         </li>
                         <li>
                             <h3>Do you have a test site?</h3>
@@ -221,7 +221,7 @@
                         </li>
                         <li>
                             <h3>Make sure everyone involved in the site knows the migration is happening.</h3>
-                            <p>For example, if you're site has a separate marketing person or team, let them know what will be changing. Later on we'll be updating 3rd party links and they may need to be aware of the chnages and make changes of their own.</p>
+                            <p>For example, if you're site has a separate marketing person or team, let them know what will be changing. Later on we'll be updating 3rd party links and they may need to be aware of the changes and make changes of their own.</p>
                         </li>
                         <li>
                             <h3>How will you track changes</h3>
@@ -240,7 +240,7 @@
                             <h3>Do you plan to move your entire site or just specific areas first?</h3>
                             <p>If you can, moving your entire site. It means more work upfront but given the SEO benefits and knowledge that your entire site is encrypted for users is worth it.</p>
                             <p>However, not all sites are able to do this at one, at the very least you'll need to setup HTTPS for any login forms, payment pages and any pages that require or reveal user details.</p>
-                            <p>The rest of guide currently assumes you're moving your entire site so some parts of this you can skip or modify. E.g. you'll want to skip changing most 3rd party settings if the majority of your site is still over HTTP instead of HTTPS. You'd also want to not setup an entire site redirect, but instead redirect just the specific pages / sections over HTTPS and potentially setup redirects going the other way for pages required over HTTP fro HTTPS.</p>
+                            <p>The rest of guide currently assumes you're moving your entire site so some parts of this you can skip or modify. E.g. you'll want to skip changing most 3rd party settings if the majority of your site is still over HTTP instead of HTTPS. You'd also want to not set up an entire site redirect, but instead redirect just the specific pages / sections over HTTPS and potentially setup redirects going the other way for pages required over HTTP fro HTTPS.</p>
                         </li>
                         <li>
                             <h3>Does your site have multiple variations?</h3>
@@ -602,7 +602,7 @@ Header set Strict-Transport-Security "max-age=15768000;"
                         </li>
                         <li>
                             <h3>Enable HTTP/2 support</h3>
-                            <p>Now that your on HTTPS, you can benefit from the speed improvements that come from HTTP/2 on your server and/or CDN. </p>
+                            <p>Now that you're on HTTPS, you can benefit from the speed improvements that come from HTTP/2 on your server and/or CDN. </p>
                         </li>
                     </ol>
 
