Added a community facebook page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
             </a>
+            <a title="Join us on Facebook" href="https://www.facebook.com/movingtoHTTPS/" class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+            </a>
             <a title="Contribute to this guide on GitHub" href="https://github.com/MovingtoHTTPS" class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
